; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-output.c_get_closest_v_ts.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-output.c_get_closest_v_ts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }
%struct.pause_data = type { i32 }

@obs = common dso_local global %struct.TYPE_4__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pause_data*)* @get_closest_v_ts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_closest_v_ts(%struct.pause_data* %0) #0 {
  %2 = alloca %struct.pause_data*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.pause_data* %0, %struct.pause_data** %2, align 8
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** @obs, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %3, align 4
  %11 = mul nsw i32 %10, 2
  store i32 %11, i32* %4, align 4
  %12 = call i32 (...) @os_gettime_ns()
  store i32 %12, i32* %5, align 4
  %13 = load %struct.pause_data*, %struct.pause_data** %2, align 8
  %14 = getelementptr inbounds %struct.pause_data, %struct.pause_data* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* %5, align 4
  %17 = load %struct.pause_data*, %struct.pause_data** %2, align 8
  %18 = getelementptr inbounds %struct.pause_data, %struct.pause_data* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = sub nsw i32 %16, %19
  %21 = load i32, i32* %4, align 4
  %22 = add nsw i32 %20, %21
  %23 = load i32, i32* %3, align 4
  %24 = sdiv i32 %22, %23
  %25 = load i32, i32* %3, align 4
  %26 = mul nsw i32 %24, %25
  %27 = add nsw i32 %15, %26
  ret i32 %27
}

declare dso_local i32 @os_gettime_ns(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
